Sun May 10 11:57:48 2015  Masaki Matsushita <glass.saga@gmail.com>

	* ext/win32ole/win32ole_variant.c: fix typo "indicies".
	  the patch is from davydovanton <antondavydov.o at gmail.com>.
	  [fix GH-892]

	* lib/rubygems/indexer.rb: ditto.

	* test/rubygems/test_gem_indexer.rb: ditto.

Sun May 10 11:44:37 2015  Masaki Matsushita <glass.saga@gmail.com>

	* string.c (rb_str_crypt): Raise ArgumentError when
	  string passed to String#crypt contains null.
	  the patch is from jrusnack <jrusnack at redhat.com>.
	  [Bug #10988] [fix GH-853]

	* test/ruby/test_string.rb: test for above.

Sun May 10 11:23:03 2015  Masaki Matsushita <glass.saga@gmail.com>

	* enum.c (enum_to_a): Use size to set array capa when possible.
	  the patch is from HonoreDB <aweiner at mdsol.com>.
	  [fix GH-444]

Sat May  9 06:48:36 2015  Eric Wong  <e@80x24.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): GC guard
	  [Bug #11123]

Fri May  8 22:57:24 2015  takiy33  <takiy33@gmail.com>

	* test/matrix/test_matrix.rb (test_determinant): refactor test on
	  Matrix#determinant, by merging with test_det for an alias method
	  det.  [Fix GH-897]

Fri May  8 15:43:11 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (body_ext_mpart): should work even if body-fld-dsp
	  is omitted.  [ruby-core:69093] [Bug #11128]

Fri May  8 15:05:57 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* doc/syntax/control_expressions.rdoc: fix a missing "a"
	  [fix GH-888][ci skip] Patch by @riffraff

Fri May  8 12:11:33 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_method_call_status): resolve refined method entry
	  to check if undefined.  [ruby-core:69064] [Bug #11117]

Thu May  7 22:22:59 2015  Sho Hashimoto  <sho-h@ruby-lang.org>

	* proc.c: [DOC] fix Binding#local_variable_set example. [ci skip]

Thu May  7 11:32:57 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* Makefile.in (rbconfig.rb): add rule to make.

Thu May  7 05:14:39 2015  Eric Wong  <e@80x24.org>
